Удаление информации о этапах и коммитах в АПИ списка запусков
