# internal/adapter/handler/httpapi/ogenapi/oas_validators_gen.go
@@ -491,6 +491,51 @@ func (s ProjectRunStatus) Validate() error {
 	}
 }
 
+func (s *ProjectRunSummary) Validate() error {
+	if s == nil {
+		return validate.ErrNilPointer
+	}
+
+	var failures []validate.FieldError
+	if err := func() error {
+		if value, ok := s.Status.Get(); ok {
+			if err := func() error {
+				if err := value.Validate(); err != nil {
+					return err
+				}
+				return nil
+			}(); err != nil {
+				return err
+			}
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "status",
+			Error: err,
+		})
+	}
+	if len(failures) > 0 {
+		return &validate.Error{Fields: failures}
+	}
+	return nil
+}
+
+func (s ProjectRunSummaryStatus) Validate() error {
+	switch s {
+	case "pending":
+		return nil
+	case "processing":
+		return nil
+	case "success":
+		return nil
+	case "failed":
+		return nil
+	default:
+		return errors.Errorf("invalid value: %v", s)
+	}
+}
+
 func (s *ProjectStage) Validate() error {
 	if s == nil {
 		return validate.ErrNilPointer
